[package]
name = "graven"
version = "0.1.0"
authors = ["nicohman <nicohman@demenses.net>"]
repository="https://git.sr.ht/~nicohman/graven"
description="A GUI version of the raven theme manager"
keywords=["linux","gui","customization"]
categories=["gui","command-line-interface"]
license="GPL-3.0"
[[bin]]
name = "graven"
path = "src/gui.rs"
[dependencies]
azul = { git = "https://github.com/maps4print/azul", rev = "2068541297c8345b622a8a05c5e0ac690d1c154e" }
ravenlib = "1.0.0"
reqwest = "0.9.5"
