[package]
name = "graven"
version = "0.1.0"
authors = ["nicohman <nicohman@demenses.net>"]
repository="https://git.sr.ht/~nicohman/graven"
description="A GUI version of the raven theme manager"
keywords=["linux","gui","customization"]
categories=["gui","command-line-interface"]
license="GPL-3.0"
[[bin]]
name = "graven"
path = "src/gui.rs"
[dependencies]
azul = { git = "https://github.com/maps4print/azul", rev = "741e3e98ad92df90daf7438b6ba5d64b620ecd47" }
ravenlib = "1.0.0"
reqwest = "0.9.5"
